--- a/index.html
+++ b/index.html
@@ -1435,7 +1435,7 @@ window.onpopstate = function(){
     }
 
     function enter_page(page_id) {
-      history.replaceState({type: "page", filename: blog["页面列表"][page_id]["文件名"]},"",`./index.html?type=page&filename=${blog["页面列表"][page_id]["文件名"]}`);
+      history.pushState({type: "page", filename: blog["页面列表"][page_id]["文件名"]},"",`./index.html?type=page&filename=${blog["页面列表"][page_id]["文件名"]}`);
       if (blog["页面列表"][page_id]["是否在新标签页打开"]) {
         if (blog["页面列表"][page_id]["这是一个完整的html"]) {
           // 在新标签页打开，是完整的html
@@ -1496,7 +1496,7 @@ window.onpopstate = function(){
     }
 
     function enter_tag(tagname) {
-      history.replaceState({type: "internal", function: "tag", argument: decodeURIComponent(tagname)},"",`./index.html?type=internal&function=tag&argument=${tagname}`);
+      history.pushState({type: "internal", function: "tag", argument: decodeURIComponent(tagname)},"",`./index.html?type=internal&function=tag&argument=${tagname}`);
       document.getElementsByTagName("title")[0].innerHTML = `标签为 ${decodeURIComponent(tagname)} 下的文章 - ${blog["博客标题"]} `;
       resetPage();
       render_nav(false);
@@ -1511,7 +1511,7 @@ window.onpopstate = function(){
     }
 
     function enter_friend_book() {
-      history.replaceState({type: "internal", function: "friendbook"},"",`./index.html?type=internal&function=friendbook`);
+      history.pushState({type: "internal", function: "friendbook"},"",`./index.html?type=internal&function=friendbook`);
       document.getElementsByTagName("title")[0].innerHTML = `友人帐 - ${blog["博客标题"]} `;
       resetPage();
       render_nav(false);
@@ -1525,7 +1525,7 @@ window.onpopstate = function(){
     }
 
     function enter_archive_and_tags() {
-      history.replaceState({type: "internal", function: "archive_and_tags"},"",`./index.html?type=internal&function=archive_and_tags`);
+      history.pushState({type: "internal", function: "archive_and_tags"},"",`./index.html?type=internal&function=archive_and_tags`);
       document.getElementsByTagName("title")[0].innerHTML = `归档与标签 - ${blog["博客标题"]} `;
       resetPage();
       render_nav(false);
@@ -1540,7 +1540,7 @@ window.onpopstate = function(){
     }
 
     function enter_indexPage() {
-      history.replaceState({type: "internal", function: "article_list"},"",`./index.html?type=internal&function=article_list`);
+      history.pushState({type: "internal", function: "article_list"},"",`./index.html?type=internal&function=article_list`);
       document.getElementsByTagName("title")[0].innerHTML = blog["博客标题"];
       resetPage();
       render_nav(true);
@@ -1557,7 +1557,7 @@ window.onpopstate = function(){
     }
 
     function enter_article(article_id) {
-      history.replaceState({type: "article", filename: blog["文章列表"][article_id]["文件名"]},"",`./index.html?type=article&filename=${blog["文章列表"][article_id]["文件名"]}`);
+      history.pushState({type: "article", filename: blog["文章列表"][article_id]["文件名"]},"",`./index.html?type=article&filename=${blog["文章列表"][article_id]["文件名"]}`);
       document.getElementsByTagName("title")[0].innerHTML = `${blog["文章列表"][article_id]["文章标题"]} - ${blog["博客标题"]} `;
       resetPage();
       render_nav(false);
