--- a/index.html
+++ b/index.html
@@ -555,8 +555,9 @@
   <script src="https://unpkg.com/marked/marked.min.js"></script>
   <script src="https://unpkg.com/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/axios@0.21.1/dist/axios.min.js"></script>
-  <script src="https://unpkg.com/valine@1.4.18/dist/Valine.min.js"></script>
+  <script src="https://unpkg.com/valine@1.5.1/dist/Valine.min.js"></script>
   <script src="https://unpkg.com/@highlightjs/cdn-assets@11.5.1/highlight.min.js"></script>
+  <script src="https://unpkg.com/crypto-js@4.1.1/crypto-js.js"></script>
   <script>
 
 marked.setOptions({
@@ -571,6 +572,20 @@ window.onpopstate = function(){
   }
 }
 
+function content_decrypt(content, password, verify = null) {
+	if (verify !== null)
+		if (CryptoJS.SHA256(password).toString() != verify)
+			return [false];
+	var key = CryptoJS.enc.Utf8.parse(password).toString();
+	var argument = {
+		iv: CryptoJS.enc.Utf8.parse('1145141919810').toString(),
+		mode: CryptoJS.mode.CBC,
+		padding: CryptoJS.pad.Pkcs7
+	}
+	var result = CryptoJS.AES.decrypt(content, key, argument).toString(CryptoJS.enc.Utf8);
+	if (result == "") return [false];
+	else return [true, result];
+}
 
     currentArticleListPageOrder = 1; //这个变量表示目前在显示文章列表中的第几页，是从1开始数的
 
