change name of blog

--- a/index.html
+++ b/index.html
@@ -529,6 +529,11 @@
       right: 20px;
       bottom: 60px;
     }
+
+    #night_mode_btn * i, #back_to_top_btn * i{
+      width: 0.7em;
+    }
+
   </style>
   <style id="whether_nightmode">
 
@@ -588,6 +593,9 @@ function content_decrypt(content, password, verify = null) {
 }
 
     currentArticleListPageOrder = 1; //这个变量表示目前在显示文章列表中的第几页，是从1开始数的
+
+    success_locate_article_id = false;
+    success_locate_page_id = false;
 
     if (localStorage.getItem("is_nightmode") === null || localStorage.getItem("is_nightmode") === undefined) {
       localStorage.setItem("is_nightmode", "off");
@@ -1767,8 +1775,20 @@ function content_decrypt(content, password, verify = null) {
           let article_filename = getUrlArgs("filename");
           for (let i = 0; i < blog["文章列表"].length; i++) {
             if (blog["文章列表"][i]["文件名"] === article_filename) {
+              success_locate_article_id = true;
               enter_article(i);
             }
+          }
+          if(success_locate_article_id !== true){
+            document.getElementById("root").setAttribute("style","");
+            document.getElementById("loading").setAttribute("style","display:none;");
+            document.getElementById("root").innerHTML = `
+            <div style="text-align:center">
+              <br />
+            <h3>此文章不存在或已被删除</h3>
+            <p>This article does not exist or has already been deleted.</p>
+            </div>
+            `;
           }
         }
 
@@ -1776,8 +1796,20 @@ function content_decrypt(content, password, verify = null) {
           let page_filename = getUrlArgs("filename");
           for (let i = 0; i < blog["页面列表"].length; i++) {
             if (blog["页面列表"][i]["文件名"] === page_filename) {
+              success_locate_page_id = true;
               enter_page(i);
             }
+          }
+          if(success_locate_page_id !== true){
+            document.getElementById("root").setAttribute("style","");
+            document.getElementById("loading").setAttribute("style","display:none;");
+            document.getElementById("root").innerHTML = `
+            <div style="text-align:center">
+              <br />
+            <h3>此页面不存在或已被删除</h3>
+            <p>This page does not exist or has already been deleted.</p>
+            </div>
+            `;
           }
         }
 
